<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Kotlin Template 2</string>

    <!-- Activity labels -->
    <string name="activity_label_login">Login</string>
    <string name="activity_label_main">MainActivity</string>

    <!-- Login -->
    <string name="login_submit_button_text">Login</string>

    <!-- Main -->
    <string name="first_run_label">Is this the first run?</string>
    <string name="first_run_toggle_on">Yes</string>
    <string name="first_run_toggle_off">No</string>
    <string name="image_picker_button">Get image</string>
    <string name="image_capture_button">Capture image</string>
    <string name="image_select_preview_content_desc">Preview of chosen image</string>
    <string name="menu_main_logout">Logout</string>

    <!-- Error messages -->
    <string name="error_no_network">No internet connection available</string>
    <string name="error_request_login">Error during login</string>
    <string name="error_request_get_item">Issue getting item</string>
    <string name="error_request_get_items">Issue getting items</string>
    <string name="error_request_add_item">Issue adding item</string>
    <string name="error_result_launcher_pick_image">Unable to pick image</string>
    <string name="error_result_launcher_capture_image">Unable to capture image</string>

    <!-- Hints -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
</resources>
