<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.MainActivity">

    <TextView
        android:id="@+id/firstRunLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_run_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/firstRunToggleButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <ToggleButton
        android:id="@+id/firstRunToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/first_run_toggle_on"
        android:textOff="@string/first_run_toggle_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstRunLabel"
        app:layout_constraintBottom_toTopOf="@id/imagePickerButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imagePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_picker_button"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstRunToggleButton"
        app:layout_constraintBottom_toTopOf="@id/imageCaptureButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageCaptureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_capture_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagePickerButton"
        app:layout_constraintBottom_toTopOf="@id/imagePickerPreview" />

    <ImageView
        android:id="@+id/imagePickerPreview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_launcher_foreground"
        android:background="@color/backgroundPlaceholder"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_select_preview_content_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCaptureButton"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>