<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imagePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_picker_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageCaptureButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageCaptureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_capture_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagePickerButton"
        app:layout_constraintBottom_toTopOf="@id/imagePickerPreviewContainer" />

    <FrameLayout
        android:id="@+id/imagePickerPreviewContainer"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCaptureButton"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imagePickerPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/image_select_preview_content_desc" />

        <ImageView
            android:id="@+id/imagePickerPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_select_preview_content_desc" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>